--- a/nbs/feature/appdb.ipynb
+++ b/nbs/feature/appdb.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +27,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "#| exporti\n",
     "\n",
     "from dataclasses import dataclass, field\n",
+    "from enum import Enum\n",
+    "\n",
     "\n",
     "from typing import List\n",
     "import datetime as dt\n",
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +68,7 @@
        "DomoAuth(domo_instance='domo-community', username=None)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +170,7 @@
        "  'updatedBy': 826020125}]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -240,7 +242,7 @@
        " 'updatedBy': 1893952720}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,14 +284,14 @@
     "    )\n",
     "\n",
     "    if not res.is_success:\n",
-    "        raise AppDb_API_Exception(res)\n",
+    "        raise AppDb_API_Exception(res, message = f\"unable to query documents in collection - {collection_id}\")\n",
     "    \n",
     "    return res\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +311,7 @@
        "    'css': '#myDiv {\\n  display: flex;\\n  align-items: center;\\n  justify-content: center;\\n  background: rgb(131,58,180);\\n\\tbackground: linear-gradient(90deg, rgba(121,64,161,1) 0%, rgba(228,88,80,1) 50%, rgba(251,141,52,1) 100%);\\n  height: calc(100vh);\\n}\\n\\nh1 {\\n  color: white;\\n}'}}}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -326,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +381,7 @@
        "   'css': '#myDiv {\\n  display: flex;\\n  align-items: center;\\n  justify-content: center;\\n  background: rgb(131,58,180);\\n\\tbackground: linear-gradient(90deg, rgba(121,64,161,1) 0%, rgba(228,88,80,1) 50%, rgba(251,141,52,1) 100%);\\n  height: calc(100vh);\\n}\\n\\nh1 {\\n  color: white;\\n}'}}}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,6 +398,83 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# | exports\n",
+    "\n",
+    "\n",
+    "class Collection_Permission_Enum(Enum):\n",
+    "    READ_CONTENT = \"READ_CONTENT\"\n",
+    "    ADMIN = \"ADMIN\"\n",
+    "    UPDATE_CONTENT = \"UPDATE_CONTENT\"\n",
+    "\n",
+    "\n",
+    "def modify_collection_permissions(\n",
+    "    collection_id: str,\n",
+    "    user_id: str,\n",
+    "    auth: dmda.DomoAuth,\n",
+    "    permission=Collection_Permission_Enum.READ_CONTENT,\n",
+    "    debug_api: bool = False,\n",
+    "):\n",
+    "\n",
+    "    endpoint = (\n",
+    "        f\"/api/datastores/v1/collections/{collection_id}/permission/USER/{user_id}\"\n",
+    "    )\n",
+    "    params = {\n",
+    "        \"overwrite\": False,\n",
+    "        \"permissions\": (\n",
+    "            permission.value\n",
+    "            if isinstance(permission, Collection_Permission_Enum)\n",
+    "            else permission\n",
+    "        ),\n",
+    "    }\n",
+    "\n",
+    "    res = dmda.domo_api_request(\n",
+    "        auth=auth,\n",
+    "        request_type=\"PUT\",\n",
+    "        params=params,\n",
+    "        endpoint=endpoint,\n",
+    "        debug_api=debug_api,\n",
+    "    )\n",
+    "\n",
+    "    if not res.is_success:\n",
+    "        raise AppDb_API_Exception(\n",
+    "            res,\n",
+    "            message=\"unable to set permissions for {user_id} to {permission.value} in collection {collection_id}\",\n",
+    "        )\n",
+    "\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ResponseGetData(response='', is_success=True, status=204, download_path=None)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "modify_collection_permissions(\n",
+    "    collection_id= 'b71d2341-8fe4-41af-b55b-163de11a906d',\n",
+    "    user_id = '1893952720' ,\n",
+    "    permission=Collection_Permission_Enum.READ_CONTENT,\n",
+    "    auth = auth\n",
+    ")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -404,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +663,7 @@
        "AppDbDocument(_collection_id='0f68f250-df2c-4a15-98ef-9cdd851602eb', _identity_columns=[], _id='302663f9-c0bc-4413-894a-3075711b3600', _created_on_dt=datetime.datetime(2024, 5, 30, 7, 45, 25, 355000, tzinfo=tzutc()), _updated_on_dt=datetime.datetime(2024, 5, 30, 10, 14, 7, 365000, tzinfo=tzutc()), content={'htmlEasy': {'js': 'fakeEmail = \"ar@test.com\";\\r\\n// fakeEmail = domo.env.userEmail;\\r\\n\\r\\n//Available globals\\r\\nvar domo = window.domo; // For more on domo.js: https://developer.domo.com/docs/dev-studio-guides/domo-js#domo.get\\r\\nvar datasets = window.datasets;\\r\\n\\r\\nlet whoami = domo.env.userId\\r\\nconsole.log(whoami)\\r\\nwhoami = 612085674 //noah\\r\\n\\r\\nSQL_activityLog = \"select `SOURCE_ID` as user_id, `Object_ID` as page_id, count(*) as viewCount FROM dataset1 where `Action` = \\'VIEWED\\' and `Object_Type` = \\'PAGE\\' and `SOURCE_ID` = \\'\" + whoami +\"\\'  GROUP BY `Object_ID`, `Source_ID` ORDER BY count(*)\"\\r\\n\\r\\nfunction mergeRowsColumns(rows, columns) {\\r\\n  return rows.map((row) => {\\r\\n    let obj = {};\\r\\n    row.forEach((item, index) => {\\r\\n      obj[columns[index]] = item;\\r\\n    });\\r\\n    return obj;\\r\\n  });\\r\\n}\\r\\n\\r\\nconst get_data = async (sql_str, dataset_alias) => {\\r\\n  api_str = `/sql/v1/${dataset_alias}`;\\r\\n  console.log(api_str, sql_str);\\r\\n\\r\\n  res = await domo.post(api_str, sql_str, { contentType: \"text/plain\" });\\r\\n\\r\\n  return mergeRowsColumns((rows = res.rows), (columns = res.columns));\\r\\n};\\r\\n\\r\\nconst paint_links = (links)=> {\\r\\n  return links.reduce( (accum, link) =>  {\\r\\n    accum += `<div >${link.page_id}<div>`\\r\\n    return accum } \\r\\n    , \"\")\\r\\n}\\r\\n\\r\\nconst main = async () => {\\r\\n  const whodiv = document.getElementById(\\'whoami\\')\\r\\n  whodiv.innerHTML = whoami\\r\\n  \\r\\n  const mydiv = document.getElementById(\\'myDiv\\')\\r\\n  \\r\\n  const data = await get_data(sql_str = SQL_activityLog, \\'dataset1\\')\\r\\n  console.log(mydiv)\\r\\n  mydiv.innerHTML = paint_links(data)\\r\\n}\\r\\n\\r\\nmain()', 'html': '<div>\\n  <div id = \"whoami\"/>\\n  <div id = \"myDiv\" />\\n</div>', 'css': '#myDiv {\\n  display: flex;\\n  align-items: center;\\n  justify-content: center;\\n  background: rgb(131,58,180);\\n\\tbackground: linear-gradient(90deg, rgba(121,64,161,1) 0%, rgba(228,88,80,1) 50%, rgba(251,141,52,1) 100%);\\n  height: calc(100vh);\\n}\\n\\nh1 {\\n  color: white;\\n}'}})"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +774,7 @@
        "[AppDbDocument(_collection_id='0f68f250-df2c-4a15-98ef-9cdd851602eb', _identity_columns=[], _id='302663f9-c0bc-4413-894a-3075711b3600', _created_on_dt=datetime.datetime(2024, 5, 30, 7, 45, 25, 355000, tzinfo=tzutc()), _updated_on_dt=datetime.datetime(2024, 5, 30, 10, 14, 7, 365000, tzinfo=tzutc()), content={'htmlEasy': {'js': 'fakeEmail = \"ar@test.com\";\\r\\n// fakeEmail = domo.env.userEmail;\\r\\n\\r\\n//Available globals\\r\\nvar domo = window.domo; // For more on domo.js: https://developer.domo.com/docs/dev-studio-guides/domo-js#domo.get\\r\\nvar datasets = window.datasets;\\r\\n\\r\\nlet whoami = domo.env.userId\\r\\nconsole.log(whoami)\\r\\nwhoami = 612085674 //noah\\r\\n\\r\\nSQL_activityLog = \"select `SOURCE_ID` as user_id, `Object_ID` as page_id, count(*) as viewCount FROM dataset1 where `Action` = \\'VIEWED\\' and `Object_Type` = \\'PAGE\\' and `SOURCE_ID` = \\'\" + whoami +\"\\'  GROUP BY `Object_ID`, `Source_ID` ORDER BY count(*)\"\\r\\n\\r\\nfunction mergeRowsColumns(rows, columns) {\\r\\n  return rows.map((row) => {\\r\\n    let obj = {};\\r\\n    row.forEach((item, index) => {\\r\\n      obj[columns[index]] = item;\\r\\n    });\\r\\n    return obj;\\r\\n  });\\r\\n}\\r\\n\\r\\nconst get_data = async (sql_str, dataset_alias) => {\\r\\n  api_str = `/sql/v1/${dataset_alias}`;\\r\\n  console.log(api_str, sql_str);\\r\\n\\r\\n  res = await domo.post(api_str, sql_str, { contentType: \"text/plain\" });\\r\\n\\r\\n  return mergeRowsColumns((rows = res.rows), (columns = res.columns));\\r\\n};\\r\\n\\r\\nconst paint_links = (links)=> {\\r\\n  return links.reduce( (accum, link) =>  {\\r\\n    accum += `<div >${link.page_id}<div>`\\r\\n    return accum } \\r\\n    , \"\")\\r\\n}\\r\\n\\r\\nconst main = async () => {\\r\\n  const whodiv = document.getElementById(\\'whoami\\')\\r\\n  whodiv.innerHTML = whoami\\r\\n  \\r\\n  const mydiv = document.getElementById(\\'myDiv\\')\\r\\n  \\r\\n  const data = await get_data(sql_str = SQL_activityLog, \\'dataset1\\')\\r\\n  console.log(mydiv)\\r\\n  mydiv.innerHTML = paint_links(data)\\r\\n}\\r\\n\\r\\nmain()', 'html': '<div>\\n  <div id = \"whoami\"/>\\n  <div id = \"myDiv\" />\\n</div>', 'css': '#myDiv {\\n  display: flex;\\n  align-items: center;\\n  justify-content: center;\\n  background: rgb(131,58,180);\\n\\tbackground: linear-gradient(90deg, rgba(121,64,161,1) 0%, rgba(228,88,80,1) 50%, rgba(251,141,52,1) 100%);\\n  height: calc(100vh);\\n}\\n\\nh1 {\\n  color: white;\\n}'}})]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
