--- a/nbs/feature/cards.ipynb
+++ b/nbs/feature/cards.ipynb
@@ -133,6 +133,7 @@
     "    debug_loop: bool = False,\n",
     "    limit: int = 100,\n",
     "    offset: int = 0,\n",
+    "    optional_parts : str = 'certification,datasources,drillPath,owners,properties,domoapp'\n",
     "):\n",
     "\n",
     "    endpoint = \"/api/content/v2/cards/adminsummary\"\n",
@@ -151,6 +152,7 @@
     "        arr_fn=arr_fn,\n",
     "        offset_params={\"limit\": \"limit\", \"offset\": \"skip\"},\n",
     "        offset_params_is_header=True,\n",
+    "        params = {'parts': optional_parts}\n",
     "\n",
     "        request_type=\"POST\",\n",
     "        endpoint=endpoint,\n",
