--- a/nbs/feature/enterprise_apps.ipynb
+++ b/nbs/feature/enterprise_apps.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "04e1bcd0",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "bb167788",
    "metadata": {},
    "outputs": [],
@@ -34,12 +34,14 @@
     "from dataclasses import dataclass, field\n",
     "import datetime as dt\n",
     "\n",
-    "from typing import List\n",
+    "from typing import List, Any\n",
     "import os\n",
     "\n",
     "import mbison.client.core as dmda\n",
     "import mbison.feature.users as dmdu\n",
-    "import mbison.utils as dmut"
+    "import mbison.utils as dmut\n",
+    "\n",
+    "from nbdev.showdoc import patch_to"
    ]
   },
   {
@@ -49,8 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
-    "import nbdev\n"
+    "# | hide\n",
+    "import nbdev"
    ]
   },
   {
@@ -66,7 +68,8 @@
     ")\n",
     "auth\n",
     "\n",
-    "design_id = \"8c16c8ab-c068-4110-940b-f738d7146efc\""
+    "# design_id = \"8c16c8ab-c068-4110-940b-f738d7146efc\" # ddx\n",
+    "design_id = '8c16c8ab-c068-4110-940b-f738d7146efc' # enterprise_app\n"
    ]
   },
   {
@@ -74,7 +77,7 @@
    "id": "d3513633",
    "metadata": {},
    "source": [
-    "## Routes"
+    "## Routes\n"
    ]
   },
   {
@@ -86,11 +89,13 @@
    "source": [
     "# | exports\n",
     "\n",
-    "class App_API_Exception(dmda.API_Exception):\n",
-    "    def __init__(self, res, message= None):\n",
-    "        super().__init__(res = res,message = message)\n",
     "\n",
-    "def get_app_by_id(auth: dmda.DomoAuth, design_id: str, debug_api: bool = False):\n",
+    "class App_API_Exception(dmda.API_Exception):\n",
+    "    def __init__(self, res, message=None):\n",
+    "        super().__init__(res=res, message=message)\n",
+    "\n",
+    "\n",
+    "def get_design_by_id(auth: dmda.DomoAuth, design_id: str, debug_api: bool = False):\n",
     "\n",
     "    endpoint = f\"/api/apps/v1/designs/{design_id}\"\n",
     "\n",
@@ -102,7 +107,9 @@
     "    )\n",
     "\n",
     "    if not res.is_success:\n",
-    "        raise App_API_Exception(res = res, message =\"is app shared with authenticated user?\")\n",
+    "        raise App_API_Exception(\n",
+    "            res=res, message=\"is app shared with authenticated user?\"\n",
+    "        )\n",
     "\n",
     "    return res"
    ]
@@ -141,8 +148,7 @@
     }
    ],
    "source": [
-    "domo_app = get_app_by_id(auth=auth, design_id=design_id, debug_api=False).response\n",
-    "domo_app"
+    "get_design_by_id(auth=auth, design_id=design_id, debug_api=False).response"
    ]
   },
   {
@@ -152,9 +158,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
+    "# | exports\n",
     "\n",
-    "def get_app_versions(auth: dmda.DomoAuth, design_id, debug_api: bool = False):\n",
+    "\n",
+    "def get_design_versions(auth: dmda.DomoAuth, design_id, debug_api: bool = False):\n",
     "\n",
     "    endpoint = f\"/domoapps/designs/{design_id}/versions\"\n",
     "\n",
@@ -181,13 +188,12 @@
     }
    ],
    "source": [
-    "app_versions = get_app_versions(\n",
+    "design_versions = get_design_versions(\n",
     "    auth=auth,\n",
-    "    # design_id=domo_app[\"id\"]\n",
     "    design_id=design_id,\n",
     ").response\n",
     "\n",
-    "app_versions"
+    "design_versions"
    ]
   },
   {
@@ -197,9 +203,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| exports\n",
+    "# | exports\n",
     "\n",
-    "def get_app_source_by_version(\n",
+    "\n",
+    "def get_design_source_code_by_version(\n",
     "    auth: dmda.DomoAuth,\n",
     "    download_path,\n",
     "    design_id,\n",
@@ -220,7 +227,9 @@
     "    )\n",
     "\n",
     "    if not res.is_success:\n",
-    "        raise App_API_Exception(res = res, message = f\"unable to download assets for {design_id}\")\n",
+    "        raise App_API_Exception(\n",
+    "            res=res, message=f\"unable to download assets for {design_id}\"\n",
+    "        )\n",
     "\n",
     "    return res"
    ]
@@ -240,10 +249,10 @@
     }
    ],
    "source": [
-    "res = get_app_source_by_version(\n",
+    "res = get_design_source_code_by_version(\n",
     "    auth=auth,\n",
     "    design_id=design_id,\n",
-    "    version=app_versions[0],\n",
+    "    version=design_versions[0],\n",
     "    debug_api=False,\n",
     "    download_path=\"../../TEST/route.zip\",\n",
     ")"
@@ -251,24 +260,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "id": "2401f5b9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# | exports\n",
-    "def get_all_apps(auth: dmda.DomoAuth, debug_api: bool = False):\n",
+    "def get_all_app_designs(auth: dmda.DomoAuth, debug_api: bool = False):\n",
     "\n",
     "    endpoint = \"/api/apps/v1/designs\"\n",
     "\n",
     "    params = {\n",
-    "        \"checkAdminAuthority\" : True, \n",
+    "        \"checkAdminAuthority\": True,\n",
     "        \"deleted\": False,\n",
-    "        \"direction\" : \"desc\",\n",
+    "        \"direction\": \"desc\",\n",
     "        # \"parts\" : \"owners,creator,thumbnail\",\n",
-    "        \"search\" : \"\",\n",
-    "        \"withPermission\" : \"ADMIN\"}\n",
-    "\n",
+    "        \"search\": \"\",\n",
+    "        \"withPermission\": \"ADMIN\",\n",
+    "    }\n",
     "\n",
     "    res = dmda.domo_api_request(\n",
     "        endpoint=endpoint,\n",
@@ -278,13 +287,12 @@
     "        debug_api=debug_api,\n",
     "    )\n",
     "\n",
-    "\n",
     "    return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "id": "c173b572",
    "metadata": {},
    "outputs": [
@@ -317,13 +325,13 @@
        "  'hasThumbnail': None}]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res = get_all_apps(auth = auth)\n",
+    "res = get_all_app_designs(auth=auth)\n",
     "all_apps = res.response\n",
     "\n",
     "print(len(all_apps))\n",
@@ -332,43 +340,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "f9998699",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_app_permissions(design_id, auth : dmda.DomoAuth, debug_api: bool = False):\n",
-    "    endpoint = f'/api/apps/v1/designs/{design_id}/permissions'\n",
+    "# def get_design_permissions(design_id, auth: dmda.DomoAuth, debug_api: bool = False):\n",
+    "#     endpoint = f\"/api/apps/v1/designs/{design_id}/permissions/ADMIN\"\n",
+    "#     endpoint = f\"/api/apps/v1/designs/dde86741-c198-4b9e-8686-cc60f8dfd5be/permissions/ADMIN\"\n",
     "\n",
-    "    res = dmda.domo_api_request(\n",
-    "        endpoint=endpoint,\n",
-    "        request_type=\"get\",\n",
-    "        auth=auth,\n",
-    "        debug_api=debug_api,\n",
-    "    )\n",
+    "#     res = dmda.domo_api_request(\n",
+    "#         endpoint=endpoint,\n",
+    "#         request_type=\"get\",\n",
+    "#         auth=auth,\n",
+    "#         debug_api=debug_api,\n",
+    "#     )\n",
     "\n",
-    "    if not res.is_success:\n",
-    "        raise App_API_Exception(res = res)\n",
-    "    \n",
-    "    return res\n"
+    "#     if not res.is_success:\n",
+    "#         raise App_API_Exception(res=res)\n",
+    "\n",
+    "#     return res"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 26,
    "id": "a34db6a6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8c16c8ab-c068-4110-940b-f738d7146efc\n"
+     ]
+    },
+    {
+     "ename": "App_API_Exception",
+     "evalue": " || 405 - Not allowed || domo-community",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mApp_API_Exception\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[26], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(design_id)\n\u001b[1;32m----> 3\u001b[0m \u001b[43mget_design_permissions\u001b[49m\u001b[43m(\u001b[49m\n\u001b[0;32m      4\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdesign_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdesign_id\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[43m    \u001b[49m\u001b[43mauth\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mauth\u001b[49m\u001b[43m,\u001b[49m\n\u001b[0;32m      6\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdebug_api\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\n\u001b[0;32m      7\u001b[0m \u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mresponse\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# next((app for app in all_apps if app[\"designId\"] == design_id), None)\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[25], line 13\u001b[0m, in \u001b[0;36mget_design_permissions\u001b[1;34m(design_id, auth, debug_api)\u001b[0m\n\u001b[0;32m      5\u001b[0m res \u001b[38;5;241m=\u001b[39m dmda\u001b[38;5;241m.\u001b[39mdomo_api_request(\n\u001b[0;32m      6\u001b[0m     endpoint\u001b[38;5;241m=\u001b[39mendpoint,\n\u001b[0;32m      7\u001b[0m     request_type\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mget\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m      8\u001b[0m     auth\u001b[38;5;241m=\u001b[39mauth,\n\u001b[0;32m      9\u001b[0m     debug_api\u001b[38;5;241m=\u001b[39mdebug_api,\n\u001b[0;32m     10\u001b[0m )\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m res\u001b[38;5;241m.\u001b[39mis_success:\n\u001b[1;32m---> 13\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m App_API_Exception(res\u001b[38;5;241m=\u001b[39mres)\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m res\n",
+      "\u001b[1;31mApp_API_Exception\u001b[0m:  || 405 - Not allowed || domo-community"
+     ]
+    }
+   ],
    "source": [
-    "design_id = 'aace1266-dc7f-42cb-8595-46069d91a703'\n",
+    "# print(design_id)\n",
     "\n",
-    "# get_app_permissions(\n",
+    "# get_design_permissions(\n",
     "#     design_id= design_id,\n",
     "#     auth = auth,\n",
-    "#     debug_api= True\n",
-    "# )\n",
+    "#     debug_api= False\n",
+    "# ).response\n",
     "\n",
-    "next((app for app in all_apps if app['id'] == design_id), None)"
+    "# # next((app for app in all_apps if app[\"designId\"] == design_id), None)"
    ]
   },
   {
@@ -378,8 +407,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def share_app(auth : dm):\n",
-    "url = 'https://domo-community.domo.com/api/apps/v1/designs/dde86741-c198-4b9e-8686-cc60f8dfd5be/permissions/ADMIN'\n"
+    "# def share_app(auth : dm):\n",
+    "#     url = 'https://domo-community.domo.com/api/apps/v1/designs/dde86741-c198-4b9e-8686-cc60f8dfd5be/permissions/ADMIN'\n"
    ]
   },
   {
@@ -387,7 +416,7 @@
    "id": "f8e084a2",
    "metadata": {},
    "source": [
-    "## Classes"
+    "## Classes\n"
    ]
   },
   {
@@ -411,6 +440,8 @@
     "    versions: List[str]\n",
     "    current_version: str\n",
     "    referencing_cards: List[dict]\n",
+    "\n",
+    "    collection_ddx_source_code  : Any = None\n",
     "\n",
     "    @classmethod\n",
     "    def _from_json(cls, obj, auth: dmda.DomoAuth, debug_api: bool = False):\n",
@@ -453,7 +484,7 @@
     "\n",
     "        return cls._from_json(obj=res.response, auth=auth, debug_api=debug_api)\n",
     "\n",
-    "    def get_source_code(\n",
+    "    def _get_source_code_enterprise_app(\n",
     "        self,\n",
     "        version: str = None,\n",
     "        debug_api: bool = False,\n",
@@ -465,7 +496,7 @@
     "        file_name = dmut.change_suffix(file_name, \".zip\")\n",
     "\n",
     "        download_path = os.path.join(download_folder, file_name)\n",
-    "        \n",
+    "\n",
     "        return get_app_source_by_version(\n",
     "            auth=self.auth,\n",
     "            download_path=download_path,\n",
@@ -473,7 +504,6 @@
     "            version=version or self.current_version,\n",
     "            debug_api=debug_api,\n",
     "        )\n",
-    "\n",
     "\n",
     "    def get_versions(self, debug_api: bool = False, return_raw: bool = False):\n",
     "\n",
@@ -492,8 +522,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# design_id = '897f9ffc-1ce2-4247-94d3-7afcb0192abb'\n",
-    "domo_app = DomoEnterpriseApp.get_by_id(design_id = design_id, auth = auth)\n",
+    "\n",
+    "domo_app = DomoEnterpriseApp.get_by_id(design_id=design_id, auth=auth)\n",
     "\n",
     "domo_app.get_versions()\n",
     "domo_app.current_version = domo_app.versions[-1]\n",
@@ -503,11 +533,58 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8eeb227d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@patch_to(DomoEnterpriseApp)\n",
+    "def _get_source_code_collection_for_ddx(self, card_id, auth, debug_api: bool = False):\n",
+    "    \"\"\"\n",
+    "    identifies the collection that stores the source code for a ddx brick\n",
+    "\n",
+    "    note card metadata includes \"domoapps\" which identifies the datastore that feeds an app.\n",
+    "    the one or many collections can be associated with a datastore / app\n",
+    "    for ddx, the source code is stored in the collection 'ddx_app_client_code'\n",
+    "    \"\"\"\n",
+    "\n",
+    "    import mbison.feature.cards as dmac\n",
+    "    import mbison.feature.appdb as dmdb\n",
+    "\n",
+    "    card_meta = dmac.get_card_by_id(\n",
+    "        card_id=card_id, auth=auth, debug_api=debug_api\n",
+    "    ).response\n",
+    "\n",
+    "    datastore_id = card_meta[\"domoapp\"][\"id\"]\n",
+    "\n",
+    "    collections = dmdb.get_collections(\n",
+    "        auth=auth, debug_api=debug_api, datastore_id=datastore_id\n",
+    "    ).response\n",
+    "\n",
+    "    source_code_collection = next(\n",
+    "        (\n",
+    "            collection\n",
+    "            for collection in collections\n",
+    "            if collection[\"name\"] == \"ddx_app_client_code\"\n",
+    "        ),\n",
+    "        None,\n",
+    "    )\n",
+    "\n",
+    "    if not source_code_collection:\n",
+    "        raise Exception(f\"unable to to retrieve source code collection for {card_id}\")\n",
+    "    \n",
+    "    self.collection_ddx_source_code = dmdb.AppDbCollection.get_by_id(auth = auth, collection_id = source_code_collection['id'], debug_api = debug_api)\n",
+    "\n",
+    "    return self.collection_ddx_source_code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "a0766782",
    "metadata": {},
    "outputs": [],
    "source": [
-    "domo_app.get_source_code(download_folder='../../TEST')"
+    "domo_app.get_source_code(download_folder=\"../../TEST\")"
    ]
   },
   {
@@ -517,20 +594,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
+    "\n",
     "\n",
     "@dataclass\n",
     "class DomoEnterpriseApps:\n",
-    "    auth : dmda.DomoAuth = field(repr = False)\n",
-    "    enterprise_apps : List[DomoEnterpriseApp] = None\n",
+    "    auth: dmda.DomoAuth = field(repr=False)\n",
+    "    enterprise_apps: List[DomoEnterpriseApp] = None\n",
     "\n",
-    "    def get_apps(self, debug_api : bool = False , return_raw: bool = False):\n",
-    "        res = get_all_apps(auth = self.auth, debug_api= debug_api)\n",
+    "    def get_apps(self, debug_api: bool = False, return_raw: bool = False):\n",
+    "        res = get_all_apps(auth=self.auth, debug_api=debug_api)\n",
     "\n",
     "        if return_raw:\n",
     "            return res\n",
-    "        \n",
-    "        self.enterprise_apps = [DomoEnterpriseApp._from_json(auth = self.auth, obj = obj) for obj in res.response]\n",
+    "\n",
+    "        self.enterprise_apps = [\n",
+    "            DomoEnterpriseApp._from_json(auth=self.auth, obj=obj)\n",
+    "            for obj in res.response\n",
+    "        ]\n",
     "        return self.enterprise_apps"
    ]
   },
@@ -541,7 +622,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "DomoEnterpriseApps(auth = auth).get_apps(debug_api = False, return_raw = False)[0:5]"
+    "DomoEnterpriseApps(auth=auth).get_apps(debug_api=False, return_raw=False)[0:5]"
    ]
   },
   {
@@ -551,9 +632,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| hide\n",
+    "# | hide\n",
     "\n",
-    "nbdev.nbdev_export('./enterprise_apps.ipynb')"
+    "nbdev.nbdev_export(\"./enterprise_apps.ipynb\")"
    ]
   }
  ],
