--- a/nbs/client/core.ipynb
+++ b/nbs/client/core.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
        "DomoAuth(domo_instance='domo-community', username='jae@datacrew.space')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,17 +429,13 @@
     "            }\n",
     "        )\n",
     "\n",
-    "    if request_type.lower() == \"post\":\n",
-    "        response = requests.post(\n",
-    "            url, json=body, headers=headers, params=params, timeout=timeout\n",
-    "        )\n",
-    "\n",
-    "    elif request_type.lower() == \"get\":\n",
+    "    if request_type.lower() == \"get\":\n",
     "        response = requests.get(url, headers=headers, params=params, timeout=timeout)\n",
     "\n",
     "    else:\n",
-    "        raise Exception(\n",
-    "            f'domo_api_request method \"{request_type.lower()}\" not implemented yet.'\n",
+    "        fn = getattr(requests, request_type.lower() )\n",
+    "        response = fn(\n",
+    "            url, json=body, headers=headers, params=params, timeout=timeout\n",
     "        )\n",
     "\n",
     "    if return_raw:\n",
@@ -450,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -543,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
